--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alt-Sandbox</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     <div id="menu">
@@ -36,8 +36,8 @@
     <div id="game" class="hidden">
         <canvas id="canvas" width="1280" height="720"></canvas>
     </div>
-    <script src="/src/main.mjs" type="module"></script>
-    <script src="/src/yaml.min.js"></script>
-    <script src="/src/jquery.js"></script>
+    <script src="./src/main.mjs" type="module"></script>
+    <script src="./src/yaml.min.js"></script>
+    <script src="./src/jquery.js"></script>
 </body>
 </html>
