--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="centr">
             <h1>Alt-Evades</h1>
             <p>Sandbox</p>
-            <p>Version: 0.2.5</p>
+            <p>Version: 0.5.5</p>
             <button id="play">Play</button>
         </div>
         <div id="settings">
@@ -24,11 +24,12 @@
         </div>
         <div id="change-log">
             <dt id="changes">Change log</dt>
-            <br>
-            <dt id="update">Начало пути (v0.2.5)</dt>
             <hr>
-            <li>Начало пути ;3</li>
-            <li>ОЧЕЕНЬ доглво</li>
+            <br>
+            <dt id="update">Маленькое Обновление <br> (v0.5.6)</dt>
+            <hr>
+            <li>Фикс на работу типов врагов.</li>
+            <li>Новый хоткей - С, отключает колизии</li>
             <hr>
         </div>
         <div id="author"><p>Created by EtherCD</p></div>
