--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="centr">
             <h1>Alt-Evades</h1>
             <p>Sandbox</p>
-            <p>Version: 0.5.5</p>
+            <p>Version: 0.5.7</p>
             <button id="play">Play</button>
         </div>
         <div id="settings">
@@ -20,10 +20,18 @@
             <ul>
                 <li>File Map -> <input type="file" id="map-file" /></li>
                 <li>Game Name -> <input type="text" id="game-name" /></li>
+                <li>Script File-> <input type="file" id="script-file" /></li>
             </ul>
         </div>
         <div id="change-log">
             <dt id="changes">Change log</dt>
+            <hr>
+            <br>
+            <dt id="update">Норм обнова <br> (v0.5.7)</dt>
+            <hr>
+            <li>Фикс на ошибки залагивания.</li>
+            <li>Добавлено множества типов врагов</li>
+            <li>Файл entity.mjs, имеет 1936 строк O;</li>
             <hr>
             <br>
             <dt id="update">Маленькое Обновление <br> (v0.5.6)</dt>
