--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="centr">
             <h1>Alt-Evades</h1>
             <p>Sandbox</p>
-            <p>Version: 0.5.7</p>
+            <p>Version: 0.5.8</p>
             <button id="play">Play</button>
         </div>
         <div id="settings">
@@ -21,10 +21,19 @@
                 <li>File Map -> <input type="file" id="map-file" /></li>
                 <li>Game Name -> <input type="text" id="game-name" /></li>
                 <li>Script File-> <input type="file" id="script-file" /></li>
+                <li>Survival Mode-> <input type="checkbox" id="survival-mode" /></li>
             </ul>
         </div>
         <div id="change-log">
             <dt id="changes">Change log</dt>
+            <hr>
+            <br>
+            <dt id="update">Обновление <br> (v0.5.8)</dt>
+            <hr>
+            <li>Фикс на телепортацию (она выглядила баганой).</li>
+            <li>Фикс отрисовки (чтобы было кефтеме)</li>
+            <li>Добавлен Survival Mode (чтобы тестить карты)</li>
+            <li>И баги с некоторыми аурами (они вообще не работают)</li>
             <hr>
             <br>
             <dt id="update">Норм обнова <br> (v0.5.7)</dt>
